--- a/midterm_project/index.html
+++ b/midterm_project/index.html
@@ -443,7 +443,7 @@ comments</a></td>
 </tr>
 <tr class="odd">
 <td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
-Polution</a></td>
+Pollution</a></td>
 <td align="left"><a href="project11/comments.html">Review
 comments</a></td>
 <td></td>
