--- a/12/index.html
+++ b/12/index.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Instructor: Edward L. Ionides" />
+<meta name="author" content="Edward L. Ionides" />
 
 
-<title>DATASCI/STATS 531/631 (Winter 2025)  ‘Modeling and Analysis of Time Series Data’</title>
+<title>Modeling and Analysis of Time Series Data DATASCI/STATS 531. Chapter 12: Introduction to simulation-based inference for epidemiological dynamics via the pomp R package</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,213 +349,75 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">DATASCI/STATS 531/631 (Winter 2025)
-<br>‘Modeling and Analysis of Time Series Data’</h1>
-<h4 class="author">Instructor: Edward L. Ionides</h4>
+<h1 class="title toc-ignore">Modeling and Analysis of Time Series
+Data<br>DATASCI/STATS 531.<br>Chapter 12: Introduction to
+simulation-based inference for epidemiological dynamics via the pomp R
+package</h1>
+<h4 class="author">Edward L. Ionides</h4>
 
 </div>
 
-<div id="TOC">
-<ul>
-<li><a href="#course-description" id="toc-course-description">Course
-description</a></li>
-<li><a href="#class-notes" id="toc-class-notes">Class notes</a></li>
-<li><a href="#homework-and-participation-assignments" id="toc-homework-and-participation-assignments">Homework and
-participation assignments</a></li>
-<li><a href="#quizzes" id="toc-quizzes">Quizzes</a></li>
-<li><a href="#midterm-project" id="toc-midterm-project">Midterm
-project</a></li>
-<li><a href="#acknowledgements-and-license" id="toc-acknowledgements-and-license">Acknowledgements and
-License</a></li>
-</ul>
-</div>
 
-<hr />
-<div id="course-description" class="section level2">
-<h2>Course description</h2>
-<p>This course gives an introduction to time series analysis using time
-domain methods and frequency domain methods. The goal is to acquire the
-theoretical and computational skills required to investigate data
-collected as a time series. The first half of the course will develop
-classical time series methodology, including auto-regressive moving
-average (ARMA) models, regression with ARMA errors, and estimation of
-the spectral density. The second half of the course will focus on state
-space model techniques for fitting structured dynamic models to time
-series data. We will progress from fitting linear, Gaussian dynamic
-models to fitting nonlinear models for which Monte Carlo methods are
-required. Examples will be drawn from ecology, economics, epidemiology,
-finance and elsewhere.</p>
-<p>Additional information is in the <a href="syllabus.html">syllabus</a>. Online discussion is on <a href="https://piazza.com/umich/winter2025/datascistats531">piazza</a>.</p>
-<p>631 includes a <a href="631.html">reading group</a> where we discuss
-a research paper each week. Students registering for 631 are expected to
-have taken at least one core PhD-level class such as STATS 600.</p>
-<hr />
-</div>
-<div id="class-notes" class="section level2">
-<h2>Class notes</h2>
-<ol style="list-style-type: decimal">
-<li><p><a href="01/index.html">Introduction</a></p></li>
-<li><p><a href="02/index.html">Estimating trend and
-autocovariance</a></p></li>
-<li><p><a href="03/index.html">Stationarity, white noise, and some basic
-time series models</a></p></li>
-<li><p><a href="04/index.html">Linear time series models and the algebra
-of ARMA models</a></p></li>
-<li><p><a href="05/index.html">Parameter estimation and model
-identification for ARMA models</a></p></li>
-<li><p><a href="06/index.html">Extending the ARMA model: Seasonality,
-integration and trend</a></p></li>
-<li><p><a href="07/index.html">Introduction to time series analysis in
-the frequency domain</a></p></li>
-<li><p><a href="08/index.html">Smoothing in the time and frequency
-domains</a></p></li>
-<li><p><a href="09/index.html">Case study: An association between
-unemployment and mortality?</a></p></li>
-<li><p><a href="10/index.html">Forecasting</a></p></li>
-<li><p><a href="11/index.html">Introduction to partially observed Markov
-process models</a></p></li>
-<li><p><a href="12/index.html">Introduction to simulation-based
-inference for epidemiological dynamics via the pomp R
-package</a></p></li>
-</ol>
-<!--
-13. [Simulation of stochastic dynamic models](12/index.html)
-
-14. [Likelihood for POMP models: Theory and practice](13/index.html)
-
-15. [Likelihood maximization for POMP models](14/index.html)
-
-16. [A case study of polio including covariates, seasonality & over-dispersion](15/index.html)
-
-17. [A case study of financial volatility and a POMP model with observations driving latent dynamics](16/index.html). With [notes on how to run the code on the Great Lakes Linux cluster](16/README.html).
-
-18. [A case study of measles: Dynamics revealed in long time series](17/index.html)
-
-19. [A case study of ebola: Model criticism and forecasting](18/index.html)
-
--->
-<!--
-
-There are further POMP case studies, in a similar style, on [Ebola modeling](https://kingaa.github.io/sbied/ebola/index.html), [measles transmission](https://kingaa.github.io/sbied/measles/index.html), and [dynamic variation in the rate of human sexual contacts](https://kingaa.github.io/sbied/contacts/index.html).
-
---------
-
--->
-</div>
-<div id="homework-and-participation-assignments" class="section level2">
-<h2>Homework and participation assignments</h2>
-<ul>
-<li><p><a href="hw00/hw00.html">Homework 0</a>. Some course preparation.
-Nothing to submit.</p></li>
-<li><p><a href="hw01/hw01.html">Homework 1</a>, due Sun Jan 19, 11:59pm.
-<a href="hw01/sol01.html">Solution</a>.</p></li>
-<li><p><a href="hw02/hw02.html">Homework 2</a>, due Tue Jan 28, 11:59pm.
-<a href="hw02/sol02.html">Solution</a>.</p></li>
-<li><p><a href="participation/participation1.html">Piazza participation
-1</a>, due Tue Jan 28, 11:59pm.</p></li>
-<li><p><a href="hw03/hw03.html">Homework 3</a>, due Sun Feb 9, 11:59pm.
-<a href="hw03/sol03.html">Solution</a>.</p></li>
-<li><p><a href="hw04/hw04.html">Homework 4</a>, due Sun Feb 16, 11:59pm.
-<a href="hw04/sol04.html">Solution</a>.</p></li>
-<li><p><a href="participation/participation2.html">Piazza participation
-2</a>, due Sun Feb 16, 11:59pm.</p></li>
-</ul>
-<!--
-* [Participation 4](participation/participation4.html), due Sun Feb 18, 11:59pm.
-
-* [Homework 5](hw05/hw05.html), due Sun Mar 17, 11:59pm.
-[Solution](hw05/sol05.html).
-
-* [Participation 5](participation/participation5.html), due Sun Mar 17, 11:59pm.
-
-
-* [Homework 6](hw06/hw06.html), due Sun Mar 24, 11:59pm. 
-[Solution](hw06/sol06.html).
-
-* [Participation 6](participation/participation6.html), due Sun Mar 24, 11:59pm.
-
-* [Homework 7](hw07/hw07.html), due Sun Mar 31, 11:59pm. Extended to Wed Apr 3.
-[Solution](hw07/sol07.html).
-
-
-* [Participation 7](participation/participation7.html), due Sun Mar 31, 11:59pm. Extended to Wed Apr 3.
-
-
-* [Homework 8](hw08/hw08.pdf), due Sun Apr 14, 11:59pm.
-[Solution](hw08/sol08.pdf).
-
-* [Participation 8](participation/participation8.html), due Sun Apr 14, 11:59pm.
-
--->
-<!--
-
-* There is no assigned homework for the last two weeks of the semester. You should work on your final project. The remaining lectures contain material that will be useful for your final projects.
-
--------------------
-
--->
-</div>
-<div id="quizzes" class="section level2">
-<h2>Quizzes</h2>
-<ul>
-<li>Quiz 1. In class on Monday 2/17. <a href="quiz/quiz1-all.pdf">Sample
-questions</a>. <a href="quiz/quiz1-sol.pdf">With solutions</a>. <a href="quiz/quiz1-sample.pdf">Sample quiz</a> randomly drawn from the
-quiz generator; the actual quiz will use a different seed.</li>
-</ul>
-</div>
-<div id="midterm-project" class="section level2">
-<h2>Midterm project</h2>
-<ul>
-<li><p><a href="midterm_project/midterm_project_info.html">Information</a>.</p></li>
-<li><p><a href="midterm_project/midterm_review.html">Midterm peer review
-report instructions</a></p></li>
-<li><p><a href="midterm_project/index.html">2025 midterm
-projects</a></p></li>
-<li><p>You are welcome to browse previous midterm projects. The course
-websites from <a href="http://ionides.github.io/531w21/midterm_project/">2021</a>, <a href="http://ionides.github.io/531w22/midterm_project/">2022</a> and <a href="http://ionides.github.io/531w24/midterm_project/">2024</a> have a
-posted summary of peer review comments. Earlier projects are also
-available, from <a href="http://ionides.github.io/531w16/midterm_project/">2016</a>, <a href="http://ionides.github.io/531w18/midterm_project/">2018</a> and <a href="http://ionides.github.io/531w20/midterm_project/">2020</a>.</p></li>
-</ul>
+<p>We are borrowing material from a short course on <a href="https://kingaa.github.io/sbied/">Simulation-Based Inference for
+Epidemiological Dynamics</a> (SBIED). This short course uses the same
+notation as DATASCI/STATS 531 and shares an emphasis on likelihood
+methods for inference. Indeed, SBIED can be viewed as a sub-course
+within DATASCI/STATS 531. Although SBIED focuses on epidemiological
+examples, you can check from previous final projects for <a href="http://ionides.github.io/531w16/final_project/">2016</a>, <a href="http://ionides.github.io/531w18/final_project/">2018</a>, <a href="http://ionides.github.io/531w20/final_project/">2020</a>, <a href="http://ionides.github.io/531w21/final_project/">2021</a>, <a href="http://ionides.github.io/531w22/final_project/">2022</a>, and <a href="http://ionides.github.io/531w24/final_project/">2024</a> that the
+ideas extend readily to a variety of other situations. Later, in Chapter
+17, we will consider models for financial markets, which is another
+major area of application for nonlinear time series techniques.</p>
+<p>Chapter 11 Part 2 has overlap with Chapter 10. It may be no bad thing
+to see the foundational material again, from a slightly different
+perspective.</p>
+<table>
+<colgroup>
+<col width="33%" />
+<col width="33%" />
+<col width="33%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">Slides</td>
+<td align="left"></td>
+<td align="left"><a href="https://kingaa.github.io/sbied/intro/slides.pdf">pdf</a></td>
+</tr>
+<tr class="even">
+<td align="left">Notes</td>
+<td align="left"></td>
+<td align="left"><a href="https://kingaa.github.io/sbied/intro/notes.pdf">pdf</a></td>
+</tr>
+<tr class="odd">
+<td align="left">Recording, Chapter 11, Part 1</td>
+<td align="left">Time series analysis and mechanistic models in ecology
+and epidemiology</td>
+<td align="left"><a href="https://youtu.be/wn4bv3nz0kU">(20
+mins)</a></td>
+</tr>
+<tr class="even">
+<td align="left">Recording, Chapter 11, Part 2</td>
+<td align="left">Introduction to POMP models</td>
+<td align="left"><a href="https://youtu.be/-P4lwVDHxjQ">(22
+mins)</a></td>
+</tr>
+<tr class="odd">
+<td align="left">Recording, Chapter 11, Part 3</td>
+<td align="left">The pomp R package for POMP models</td>
+<td align="left"><a href="https://youtu.be/1MY8NuJ5fr4">(7
+mins)</a></td>
+</tr>
+</tbody>
+</table>
 <hr />
 <!--
-
-## Final project
-
-
-* [Information](final_project/final_project_info.html)
-
-* [Final peer review report instructions](final_project/final_review.html)
-
-* [2024 final projects](final_project/index.html)
-
-* You're welcome to browse previous final projects. The [2021](http://ionides.github.io/531w21/final_project/) and  [2022](http://ionides.github.io/531w22/final_project/)  final projects have a posted summary of peer review comments. Earlier projects from [2016](http://ionides.github.io/531w16/final_project/), [2018](http://ionides.github.io/531w18/final_project/), [2020](http://ionides.github.io/531w20/final_project/) may also be useful.
-
-If building on old source code, note that there are some differences between versions of the software package **pomp**. The [**pomp** version 2 upgrade guide](https://kingaa.github.io/pomp/vignettes/upgrade_guide.html) can be helpful. There are various smaller changes between **pomp 2.0** and the current **pomp 5.6**.
-
---------
-
-## Using the Great Lakes cluster
-
-* Great Lakes access will be set up after the midterm project and used for the second half of the course.
-
-* [Introductory notes](greatlakes/index.html) for using our class account on the greatlakes cluster. This is optional but may be helpful for your final project.
-
-* If you are already familiar with using R on Great Lakes, all you need to know is the class account: ```stats531w24_class```.
-
-* You are expected to use our class account only for computations related to DATASCI/STATS 531.
-
-* Please share knowledge about cluster computing between group members, and/or on piazza, to help everyone who wants to learn these skills.
-
-* Cluster-related questions can also be emailed to arc-support@umich.edu.
-
----------
-
+| Annotated slides | | [pdf](slides-annotated.pdf) |
 -->
-</div>
-<div id="acknowledgements-and-license" class="section level2">
-<h2>Acknowledgements and License</h2>
-<p>This course and the code involved are made available with an <a href="LICENSE">Creative Commons</a>. A list of acknowledgments is <a href="acknowledge.html">available</a>.</p>
-</div>
+<hr />
+<p><a href="../index.html">Back to course homepage</a><br />
+<a href="../acknowledge.html">Acknowledgements</a><br />
+<a href="http://github.com/kingaa/sbied/tree/master/intro">Source code
+for these notes</a></p>
+<hr />
 
 
 
