--- a/index.html
+++ b/index.html
@@ -417,10 +417,10 @@ process models</a></p></li>
 <li><p><a href="12/index.html">Introduction to simulation-based
 inference for epidemiological dynamics via the pomp R
 package</a></p></li>
+<li><p><a href="12/index.html">Simulation of stochastic dynamic
+models</a></p></li>
 </ol>
 <!--
-13. [Simulation of stochastic dynamic models](12/index.html)
-
 14. [Likelihood for POMP models: Theory and practice](13/index.html)
 
 15. [Likelihood maximization for POMP models](14/index.html)
