--- a/13/index.html
+++ b/13/index.html
@@ -402,25 +402,25 @@ ideas (including rumors or mis-information) on social networks.</p>
 <td align="center"><a href="https://kingaa.github.io/sbied/stochsim/exercises.html">html</a></td>
 </tr>
 <tr class="odd">
-<td align="left">Recording, Chapter 13, Part 1</td>
+<td align="left">Recording, Part 1</td>
 <td align="left">Compartment models</td>
 <td align="center"><a href="https://youtu.be/l5YCll5qcP0">(17
 mins)</a></td>
 </tr>
 <tr class="even">
-<td align="left">Recording, Chapter 13, Part 2</td>
+<td align="left">Recording, Part 2</td>
 <td align="left">Euler’s method for simulating Markov processes</td>
 <td align="center"><a href="https://youtu.be/69F4oEjXkug">(24
 mins)</a></td>
 </tr>
 <tr class="odd">
-<td align="left">Recording, Chapter 13, Part 3</td>
+<td align="left">Recording, Part 3</td>
 <td align="left">Compartment models in the pomp package</td>
 <td align="center"><a href="https://youtu.be/XmUQR1Bp8C4">(47
 mins)</a></td>
 </tr>
 <tr class="even">
-<td align="left">Recording, Chapter 13, Part 4</td>
+<td align="left">Recording, Part 4</td>
 <td align="left">Discussion of exercises</td>
 <td align="center"><a href="https://youtu.be/sNcNhvNY2Ro">(10
 mins)</a></td>
