--- a/14/index.html
+++ b/14/index.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Edward L. Ionides" />
 
 
-<title>Modeling and Analysis of Time Series Data DATASCI/STATS 531. Chapter 12: Introduction to simulation-based inference for epidemiological dynamics via the pomp R package</title>
+<title>Modeling and Analysis of Time Series Data DATASCI/STATS 531.  Chapter 14: Likelihood for POMP models: Theory and practice</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,63 +350,78 @@ display: none;
 
 
 <h1 class="title toc-ignore">Modeling and Analysis of Time Series
-Data<br>DATASCI/STATS 531.<br>Chapter 12: Introduction to
-simulation-based inference for epidemiological dynamics via the pomp R
-package</h1>
+Data<br>DATASCI/STATS 531. <br>Chapter 14: Likelihood for POMP models:
+Theory and practice</h1>
 <h4 class="author">Edward L. Ionides</h4>
 
 </div>
 
 
-<p>We are borrowing material from a short course on <a href="https://kingaa.github.io/sbied/">Simulation-Based Inference for
-Epidemiological Dynamics</a> (SBIED). This short course uses the same
-notation as DATASCI/STATS 531 and shares an emphasis on likelihood
-methods for inference. Indeed, SBIED can be viewed as a sub-course
-within DATASCI/STATS 531. Although SBIED focuses on epidemiological
-examples, you can check from previous final projects for <a href="http://ionides.github.io/531w16/final_project/">2016</a>, <a href="http://ionides.github.io/531w18/final_project/">2018</a>, <a href="http://ionides.github.io/531w20/final_project/">2020</a>, <a href="http://ionides.github.io/531w21/final_project/">2021</a>, <a href="http://ionides.github.io/531w22/final_project/">2022</a>, and <a href="http://ionides.github.io/531w24/final_project/">2024</a> that the
-ideas extend readily to a variety of other situations. Later, in Chapter
-17, we will consider models for financial markets, which is another
-major area of application for nonlinear time series techniques.</p>
+<p>We continue using material from the short course <a href="https://kingaa.github.io/sbied/">Simulation-Based Inference for
+Epidemiological Dynamics</a> (SBIED). We review likelihood-based
+inference, and introduce the particle filter (also known as sequential
+Monte Carlo) which enables likelihood evaluation for general POMP
+models. We use the <code>pfilter()</code> implementation of particle
+filtering in pomp to investigate the likelihood surface for a
+Susceptible-Infected-Recovered (SIR) model.</p>
+<p>Sections I and II review material in Chapter 11, from a slightly
+different perspective, and you may want to watch this at 1.5 x speed if
+you are already comfortable with the material. Section III introduces
+the particle filter algorithm. Section IV reviews the likelihood-based
+inference topics of Chapter 5, in the context of POMP models. Sections V
+and VI look at the geometry of the likelihood for an SIR model. Section
+VII looks deeper at likelihood inference - there is overlap with Chapter
+5 but also some important new ideas.</p>
 <table>
 <colgroup>
-<col width="33%" />
-<col width="33%" />
-<col width="33%" />
+<col width="27%" />
+<col width="27%" />
+<col width="44%" />
 </colgroup>
 <tbody>
 <tr class="odd">
 <td align="left">Slides</td>
 <td align="left"></td>
-<td align="left"><a href="https://kingaa.github.io/sbied/intro/slides.pdf">pdf</a></td>
+<td align="center"><a href="https://kingaa.github.io/sbied/pfilter/slides.pdf">pdf</a></td>
 </tr>
 <tr class="even">
-<td align="left">Annotated slides</td>
-<td align="left"></td>
-<td align="left"><a href="slides-annotated.pdf">pdf</a></td>
-</tr>
-<tr class="odd">
 <td align="left">Notes</td>
 <td align="left"></td>
-<td align="left"><a href="https://kingaa.github.io/sbied/intro/notes.pdf">pdf</a></td>
+<td align="center"><a href="https://kingaa.github.io/sbied/pfilter/notes.pdf">pdf</a></td>
+</tr>
+<tr class="odd">
+<td align="left"><strong>R</strong> script</td>
+<td align="left"></td>
+<td align="center"><a href="https://kingaa.github.io/sbied/pfilter/main.R"><strong>R</strong></a></td>
 </tr>
 <tr class="even">
-<td align="left">Recording, Part 1</td>
-<td align="left">Time series analysis and mechanistic models in ecology
-and epidemiology</td>
-<td align="left"><a href="https://youtu.be/wn4bv3nz0kU">(20
+<td align="left">Recording, Section III</td>
+<td align="left">Computing the likelihood</td>
+<td align="center"><a href="https://youtu.be/uZZKglvJq0c">(27
 mins)</a></td>
 </tr>
 <tr class="odd">
-<td align="left">Recording, Part 2</td>
-<td align="left">Introduction to POMP models</td>
-<td align="left"><a href="https://youtu.be/-P4lwVDHxjQ">(22
+<td align="left">Recording, Section IV</td>
+<td align="left">Review of likelihood-based inference</td>
+<td align="center"><a href="https://youtu.be/68cX1ckgusY">(12
 mins)</a></td>
 </tr>
 <tr class="even">
-<td align="left">Recording, Part 3</td>
-<td align="left">The pomp R package for POMP models</td>
-<td align="left"><a href="https://youtu.be/1MY8NuJ5fr4">(7
+<td align="left">Recording, Sections V,VI</td>
+<td align="left">Geometry of the likelihood function</td>
+<td align="center"><a href="https://youtu.be/oNpdp5WcdUQ">(31
 mins)</a></td>
+</tr>
+<tr class="odd">
+<td align="left">Recording, Section VII</td>
+<td align="left">From likelihood evaluation toward inference</td>
+<td align="center"><a href="https://youtu.be/ZJ7mmC0E3zs">(17
+mins)</a></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="center"></td>
 </tr>
 </tbody>
 </table>
@@ -417,7 +432,7 @@ mins)</a></td>
 <hr />
 <p><a href="../index.html">Back to course homepage</a><br />
 <a href="../acknowledge.html">Acknowledgements</a><br />
-<a href="http://github.com/kingaa/sbied/tree/master/intro">Source code
+<a href="http://github.com/kingaa/sbied/tree/master/pfilter">Source code
 for these notes</a></p>
 <hr />
 
