--- a/index.html
+++ b/index.html
@@ -421,19 +421,19 @@ inference for epidemiological dynamics via the pomp R
 package</a></p></li>
 <li><p><a href="13/index.html">Simulation of stochastic dynamic
 models</a></p></li>
+<li><p><a href="14/index.html">Likelihood for POMP models: Theory and
+practice</a></p></li>
 </ol>
 <!--
-14. [Likelihood for POMP models: Theory and practice](13/index.html)
+15. [Likelihood maximization for POMP models](15/index.html)
 
-15. [Likelihood maximization for POMP models](14/index.html)
+16. [A case study of polio including covariates, seasonality & over-dispersion](16/index.html)
 
-16. [A case study of polio including covariates, seasonality & over-dispersion](15/index.html)
+17. [A case study of financial volatility and a POMP model with observations driving latent dynamics](17/index.html). With [notes on how to run the code on the Great Lakes Linux cluster](17/README.html).
 
-17. [A case study of financial volatility and a POMP model with observations driving latent dynamics](16/index.html). With [notes on how to run the code on the Great Lakes Linux cluster](16/README.html).
+18. [A case study of measles: Dynamics revealed in long time series](18/index.html)
 
-18. [A case study of measles: Dynamics revealed in long time series](17/index.html)
-
-19. [A case study of ebola: Model criticism and forecasting](18/index.html)
+19. [A case study of ebola: Model criticism and forecasting](19/index.html)
 
 -->
 <!--
