--- a/index.html
+++ b/index.html
@@ -466,12 +466,14 @@ Nothing to submit.</p></li>
 </ul>
 <!--
 [Solution](hw05/sol05.html).
-
-* [Homework 6](hw06/hw06.html), due Sun Mar 24, 11:59pm. 
-[Solution](hw06/sol06.html).
-
-* [Participation 3](participation/participation6.html), due Sun Mar 24, 11:59pm.
-
+-->
+<ul>
+<li><p><a href="hw06/hw06.html">Homework 6</a>, due Sun Mar 23, 11:59pm.
+<a href="hw06/sol06.html">Solution</a>.</p></li>
+<li><p><a href="participation/participation6.html">Participation 3</a>,
+due Sun Mar 23, 11:59pm.</p></li>
+</ul>
+<!--
 * [Homework 7](hw07/hw07.html), due Sun Mar 31, 11:59pm. Extended to Wed Apr 3.
 [Solution](hw07/sol07.html).
 
