--- a/index.html
+++ b/index.html
@@ -469,7 +469,9 @@ Nothing to submit.</p></li>
 -->
 <ul>
 <li><p><a href="hw06/hw06.html">Homework 6</a>, due Sun Mar 23, 11:59pm.
-<a href="hw06/sol06.html">Solution</a>.</p></li>
+<!--
+[Solution](hw06/sol06.html).
+--></p></li>
 <li><p><a href="participation/participation6.html">Participation 3</a>,
 due Sun Mar 23, 11:59pm.</p></li>
 </ul>
