pomp install updates

--- a/pomp_prep/index.html
+++ b/pomp_prep/index.html
@@ -485,7 +485,8 @@ install_github(&quot;kingaa/pomp&quot;)</code></pre>
 <p>or one that otherwise refers to <code>gfortran</code>, then it is
 likely that you do not have the necessary version of
 <strong>gfortran</strong> installed. Have a look at <a href="https://mac.r-project.org/tools/">these instructions</a> and
-contact me at the address above if these don’t work for you.</p>
+contact me at the address above if these don’t work for you. Note that
+you may need to install specifically <a href="https://mac.r-project.org/tools/gfortran-12.2-universal.pkg">gfortran-12.2</a>.</p>
 <p>Some users have reported receiving an error complaining that</p>
 <pre><code>&#39;stdlib.h&#39; file not found</code></pre>
 <p>This indicates that the command-line tools from
