various updates, including hw7

--- a/index.html
+++ b/index.html
@@ -367,6 +367,8 @@ participation assignments</a></li>
 project</a></li>
 <li><a href="#final-project" id="toc-final-project">Final
 project</a></li>
+<li><a href="#using-the-great-lakes-cluster" id="toc-using-the-great-lakes-cluster">Using the Great Lakes
+cluster</a></li>
 <li><a href="#acknowledgements-and-license" id="toc-acknowledgements-and-license">Acknowledgements and
 License</a></li>
 </ul>
@@ -474,9 +476,9 @@ Nothing to submit.</p></li>
 --></p></li>
 <li><p><a href="participation/participation3.html">Participation 3</a>,
 due Sun Mar 23, 11:59pm.</p></li>
-</ul>
+<li><p><a href="hw07/hw07.html">Homework 7</a>, due Sun Mar 30, 11:59pm.
 <!--
-* [Homework 7](hw07/hw07.html), due Sun Mar 31, 11:59pm. Extended to Wed Apr 3.
+
 [Solution](hw07/sol07.html).
 
 
@@ -488,7 +490,8 @@ due Sun Mar 23, 11:59pm.</p></li>
 
 * [Participation 8](participation/participation8.html), due Sun Apr 14, 11:59pm.
 
--->
+--></p></li>
+</ul>
 <!--
 
 * There is no assigned homework for the last two weeks of the semester. You should work on your final project. The remaining lectures contain material that will be useful for your final projects.
@@ -541,28 +544,30 @@ be useful.</li>
 <p>If building on old source code, note that there are some differences
 between versions of the software package <strong>pomp</strong>. The <a href="https://kingaa.github.io/pomp/vignettes/upgrade_guide.html"><strong>pomp</strong>
 version 2 upgrade guide</a> can be helpful. There are various smaller
-changes between <strong>pomp 2.0</strong> and the current <strong>pomp
-5.6</strong>.</p>
+changes between <strong>pomp 2.0</strong> and the current
+<strong>pomp</strong>.</p>
 <hr />
-<!--
-
-## Using the Great Lakes cluster
-
-* Great Lakes access will be set up after the midterm project and used for the second half of the course.
-
-* [Introductory notes](greatlakes/index.html) for using our class account on the greatlakes cluster. This is optional but may be helpful for your final project.
-
-* If you are already familiar with using R on Great Lakes, all you need to know is the class account: ```stats531w24_class```.
-
-* You are expected to use our class account only for computations related to DATASCI/STATS 531.
-
-* Please share knowledge about cluster computing between group members, and/or on piazza, to help everyone who wants to learn these skills.
-
-* Cluster-related questions can also be emailed to arc-support@umich.edu.
-
----------
-
--->
+</div>
+<div id="using-the-great-lakes-cluster" class="section level2">
+<h2>Using the Great Lakes cluster</h2>
+<ul>
+<li><p>Great Lakes access will be set up after the midterm project and
+used for the second half of the course.</p></li>
+<li><p><a href="greatlakes/index.html">Introductory notes</a> for using
+our class account on the greatlakes cluster. This is optional but may be
+helpful for your final project.</p></li>
+<li><p>If you are already familiar with using R on Great Lakes, all you
+need to know is the class account:
+<code>datasci531w25_class</code>.</p></li>
+<li><p>You are expected to use our class account only for computations
+related to DATASCI/STATS 531.</p></li>
+<li><p>Please share knowledge about cluster computing between group
+members, and/or on piazza, to help everyone who wants to learn these
+skills.</p></li>
+<li><p>Cluster-related questions can also be emailed to the U-M
+Information and Technology Services helpdesk, <a href="mailto:help@umich.edu" class="email">help@umich.edu</a></p></li>
+</ul>
+<hr />
 </div>
 <div id="acknowledgements-and-license" class="section level2">
 <h2>Acknowledgements and License</h2>
