--- a/index.html
+++ b/index.html
@@ -425,10 +425,8 @@ package</a></p></li>
 models</a></p></li>
 <li><p><a href="14/index.html">Likelihood for POMP models: Theory and
 practice</a></p></li>
-</ol>
-<!--
-15. [Likelihood maximization for POMP models](15/index.html)
-
+<li><p><a href="15/index.html">Likelihood maximization for POMP
+models</a> <!--
 16. [A case study of polio including covariates, seasonality & over-dispersion](16/index.html)
 
 17. [A case study of financial volatility and a POMP model with observations driving latent dynamics](17/index.html). With [notes on how to run the code on the Great Lakes Linux cluster](17/README.html).
@@ -437,7 +435,8 @@ practice</a></p></li>
 
 19. [A case study of ebola: Model criticism and forecasting](19/index.html)
 
--->
+--></p></li>
+</ol>
 <!--
 
 There are further POMP case studies, in a similar style, on [Ebola modeling](https://kingaa.github.io/sbied/ebola/index.html), [measles transmission](https://kingaa.github.io/sbied/measles/index.html), and [dynamic variation in the rate of human sexual contacts](https://kingaa.github.io/sbied/contacts/index.html).
