update index again

--- a/index.html
+++ b/index.html
@@ -473,8 +473,8 @@ Nothing to submit.</p></li>
 <!--
 [Solution](hw06/sol06.html).
 --></p></li>
-<li><p><a href="participation/participation3.html">Participation 3</a>,
-due Sun Mar 23, 11:59pm.</p></li>
+<li><p><a href="participation/participation3.html">Piazza participation
+3</a>, due Sun Mar 23, 11:59pm.</p></li>
 <li><p><a href="hw07/hw07.html">Homework 7</a>, due Sun Mar 30, 11:59pm.
 <!--
 
@@ -487,7 +487,7 @@ due Sun Mar 23, 11:59pm.</p></li>
 * [Homework 8](hw08/hw08.pdf), due Sun Apr 14, 11:59pm.
 [Solution](hw08/sol08.pdf).
 
-* [Participation 8](participation/participation8.html), due Sun Apr 14, 11:59pm.
+* [Piazza participation 4](participation/participation4.html), due Sun Apr 14, 11:59pm.
 
 --></p></li>
 </ul>
