hw7 deadline extension

--- a/index.html
+++ b/index.html
@@ -475,7 +475,10 @@ Nothing to submit.</p></li>
 --></p></li>
 <li><p><a href="participation/participation3.html">Piazza participation
 3</a>, due Sun Mar 23, 11:59pm.</p></li>
-<li><p><a href="hw07/hw07.html">Homework 7</a>, due Sun Mar 30, 11:59pm.
+<li><p><a href="hw07/hw07.html">Homework 7</a>, due Sun Mar 30.
+<strong>Deadline extended to Wed Apr 2, due to canceled class</strong>,
+11:59pm.</p></li>
+</ul>
 <!--
 
 [Solution](hw07/sol07.html).
@@ -489,8 +492,7 @@ Nothing to submit.</p></li>
 
 * [Piazza participation 4](participation/participation4.html), due Sun Apr 14, 11:59pm.
 
---></p></li>
-</ul>
+-->
 <!--
 
 * There is no assigned homework for the last two weeks of the semester. You should work on your final project. The remaining lectures contain material that will be useful for your final projects.
