--- a/hw07/hw07.html
+++ b/hw07/hw07.html
@@ -12,7 +12,7 @@
 <meta name="author" content="DATASCI/STATS 531" />
 
 
-<title>Homework 7, due 11:59pm Sunday 3/30</title>
+<title>Homework 7, due 11:59pm Sunday 3/30, extended to Wednesday 4/2</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,7 +349,8 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Homework 7, due 11:59pm Sunday 3/30</h1>
+<h1 class="title toc-ignore">Homework 7, due 11:59pm Sunday 3/30,
+extended to Wednesday 4/2</h1>
 <h4 class="author">DATASCI/STATS 531</h4>
 
 </div>
