--- a/631.html
+++ b/631.html
@@ -446,8 +446,8 @@ identify model misspecification.</p></li>
 COVID-19 transmission and to forecast its trajectory. This paper shows
 how it is critical to understand both the reporting process and the
 disease dynamics.</p></li>
-<li><p>Week starting Apr 14: <a href="https://doi.org/10.1371/journal.pcbi.1012616"><strong>madden24</strong></a>.
-Integrating deep learning with mechanistic modeling for time series
+<li><p>Week starting Apr 14: <a href="https://doi.org/10.1371/journal.pcbi.1012616"><strong>madden24</strong></a>
+<br> Integrating deep learning with mechanistic modeling for time series
 data, in the context of measles epidemiology.</p></li>
 </ol>
 </div>
@@ -479,10 +479,6 @@ Software</em>, 26(3).</p>
 Kristensen, K., Nielsen, A., Berg, C. W., Skaug, H., &amp; Bell, B. M.
 (2016). TMB: Automatic Differentiation and Laplace Approximation.
 <em>Journal of Statistical Software</em>, 70(5), 1–21.</p>
-<!--
-[__lau21__](https://doi.org/10.1371/journal.pcbi.1010251).
-Lau, M. S., Becker, A., Madden, W., Waller, L. A., Metcalf, C. J. E., & Grenfell, B. T. (2022). Comparing and linking machine learning and semi-mechanistic models for the predictability of endemic measles dynamics. _PLOS Computational Biology_, 18(9), e1010251. 
--->
 <p><a href="https://doi.org/10.1098/rsta.2020.0209"><strong>lim21</strong></a>.
 Lim, B., &amp; Zohren, S. (2021). Time-series forecasting with deep
 learning: a survey. <em>Philosophical Transactions of the Royal Society
