--- a/index.html
+++ b/index.html
@@ -509,8 +509,8 @@ Nothing to submit.</p></li>
 <ul>
 <li><p>Quiz 1. In class on Monday 2/17. <a href="quiz/quiz1-all.pdf">Sample questions</a>. <a href="quiz/quiz1-sol.pdf">With solutions</a>. <a href="quiz/quiz1-sample.pdf">Sample quiz</a> randomly drawn from the
 quiz generator; the actual quiz will use a different seed.</p></li>
-<li><p>Quiz 2. In class on Wednesday 4/16. <a href="quiz/quiz2-all.pdf">Sample questions</a>. <a href="quiz/quiz2-sol.pdf">With solutions</a>. Note: this quiz is still
-in development.</p></li>
+<li><p>Quiz 2. In class on Wednesday 4/16. <a href="quiz/quiz2-all.pdf">Sample questions</a>. <a href="quiz/quiz2-sol.pdf">With solutions</a>. <a href="quiz/quiz2-sample.pdf">Sample quiz</a> randomly drawn from the
+quiz generator; the actual quiz will use a different seed.</p></li>
 </ul>
 </div>
 <div id="midterm-project" class="section level2">
