--- a/17/index.html
+++ b/17/index.html
@@ -382,28 +382,32 @@ dynamics</h1>
 <td align="center"><a href="slides.pdf">pdf</a></td>
 </tr>
 <tr class="even">
+<td align="left">annotated slides</td>
+<td align="center"><a href="slides-annotated.pdf">pdf</a></td>
+</tr>
+<tr class="odd">
 <td align="left">notes</td>
 <td align="center"><a href="notes.pdf">pdf</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left"><strong>R</strong> script</td>
 <td align="center"><a href="main.R"><strong>R</strong></a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">Running the notes on greatlakes</td>
 <td align="center"><a href="README.html">HTML</a>, <a href="r-3.sbat">sbat</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">Recording, Part 1</td>
 <td align="center"><a href="https://youtu.be/cDcPny96Gcs">(16
 mins)</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">Recording, Part 2</td>
 <td align="center"><a href="https://youtu.be/TAUDn2RkUWU">(24
 mins)</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">Recording, Part 3</td>
 <td align="center"><a href="https://youtu.be/XvM991mISJs">(17
 mins)</a></td>
