setting up final peer review

--- a/final_project/final_review.html
+++ b/final_project/final_review.html
@@ -387,10 +387,10 @@ weaknesses of the project (from both technical and conceptual
 perspectives) as well as identifying points with room for improvement.
 It is appropriate for your report to include comments on coding
 decisions and reproducibility. The expected length of the report is at
-least 500 words. Your report can be shorter if the project is so strong
-that there is not much criticism to find, but if other readers find
-substantial room for improvement then your report may look
-superficial.</p>
+least 500 words. Your report can be shorter if you find the project is
+so strong that there is not much criticism to find, but it is unusual
+that a careful reading cannot find any technical weaknesses or
+substantial room for improvement.</p>
 <hr />
 
 
